<?xml version="1.0"?>
<package format="3">
  <name>feature_tracker</name>
  <version>0.0.0</version>
  <description>The feature_tracker package</description>
  <maintainer email="qintonguav@gmail.com">dvorak</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>message_filters</depend>
  <depend>nav_msgs</depend>           
  <depend>geometry_msgs</depend>           
  <depend>std_msgs</depend>           
  <depend>camera_model</depend>

  <depend>visualization_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_ros</depend>
  <depend>libpcl-all-dev</depend>

  <depend>gtsam</depend>
  <depend>geographiclib</depend>
  <depend>eigen</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>